--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,6 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.js"></script>
     <script src="https://js.stripe.com/v3/"></script>
     <style>
 * {
