Add new stripe={...} prop (#145)
### Motivation

- "I don’t want to load Stripe.js until my customer needs it."
  - #24
- "I want to do the first render on the server for better performance."
  - #64, #120
- "I want to store my `stripe` instance in redux."
  - #8, #86 

### Summary

<!-- Simple summary of what the code does or what you have changed. If this is a visual change, please include a screenshot/GIF. -->

This adds a new `stripe={...}` prop to `<StripeProvider>`.
The new `stripe` prop is allowed to be null. The implication is that this
library is now designed to work in server-side and asynchronous environments.

See the README for the functionality enabled by this PR.

### Testing & documentation

The existing unit tests are brittle and so they fail.

The old demo works (<http://localhost:8080>)
There's a new async demo (<http://localhost:8080/async/>)

Any brittle tests of old functionality have been updated.
There are new tests for sync behavior, using `stripe` instead of `apiKey`.
There are new tests for async behavior.
There are new tests for SSR behavior.

### Commit summary

There are a lot of changes in this PR. To make it easier to understand,
consider reviewing each commit in sequence:

<details>
<summary>Click to expand</summary>

- **Allow either apiKey OR stripe param in Provider** (57b725f)

  Where to start? Look at:

  - `type State`: what's the state's shape look like each case?

  - the four if/then/else cases in the constructor: the "if both" and
  "if
   neither" cases arise when trying to use a product of values
   (`{apiKey, stripe}`) like a sum of values (`apiKey | stripe`).
   Half this code would be unnessary if JavaScript was typed statically.

  - `getChildContext`: notice how we either call the callback right now
   or stash it away for later.

- **Use new ProviderContext in Element/Elements** (ed5d43b)

  *All* the individual Element components will now act like they're
  

--- a/demo/async/index.html
+++ b/demo/async/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://js.stripe.com/v3/"></script>
+    <title>async demo | react-stripe-elements</title>
     <style>
 * {
   box-sizing: border-box;
@@ -58,9 +58,7 @@ button {
 }
 
 form {
-  margin-bottom: 40px;
-  padding-bottom: 40px;
-  border-bottom: 3px solid #e6ebf1;
+  margin: 80px 0;
 }
 
 button:hover {
@@ -87,13 +85,21 @@ button:hover {
   transition: all 150ms ease;
 }
 
-.StripeElement.PaymentRequestButton {
-  padding: 0;
+button[disabled] {
+  opacity: 0.6;
 }
+
+.StripeElement.loading {
+  height: 41.6px;
+  opacity: 0.6;
+}
+
     </style>
   </head>
   <body>
     <div class="App">
     </div>
+    <script src="/async.js"></script>
+    <!-- NOTE: The Stripe.js script tag is manually injected in /async.js -->
   </body>
 </html>
